# Linux-Shared-Memory-Bus

./: .gitignore  CMakeLists.txt  README.md
include/: circular_buffer.hpp  message.hpp  shm_manager.hpp
src/: circular_buffer.cpp  main.cpp  shm_manager.cpp
